Fixed Pop-up wrapping text and positioning

--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -51,6 +51,7 @@
 }
 
 .iconButton {
+  position: inherit;
   border: none;
   padding: 8px;
 }
