--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -5,12 +5,61 @@
   height: 100vh;
 }
 
-.main {
-  display: grid;
-  grid-template-columns: 600px 1fr 600px;
-  margin-left: auto;
-  margin-right: auto;
+@media only screen and (min-width: 600px) {
+  .main {
+    display: grid;
+    grid-template-columns: 300px 1fr 100px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
+
+@media only screen and (min-width: 768px) {
+  .main {
+    display: grid;
+    grid-template-columns: 300px 1fr 200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+
+@media only screen and (min-width: 992px) {
+  .main {
+    display: grid;
+    grid-template-columns: 400px 1fr 400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .main {
+    display: grid;
+    grid-template-columns: 600px 1fr 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media only screen and (min-width: 2000px) {
+  .main {
+    display: grid;
+    grid-template-columns: 750px 1fr 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+
+
+.mainBorders {
+  /*border-width: 0 1px;*/
+  /*border-style: solid;*/
+  /*border-color: var(--color-border);*/
+
+}
+
 
 .mainBorders {
   /*border-width: 0 1px;*/
